# lemur-numpy

./: LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py
lemur/: __init__.py  export_weights.py  lemur.py  lemur_numpy.py  maxsim.py  maxsim_gpu.py  model.py  single_maxsim.py
lemur/_ext/: bindings.cpp  maxsim.h
